--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon run src/index.js"
+    "dev": "nodemon run src/index.js",
+    "start":"node src/index.js"
   },
   "keywords": [],
   "author": "",
